--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_URI=mongodb://localhost:27017/tasksAppCoally
-
-PORT=5000
 MONGO_URI_Attlas=mongodb+srv://<usuario>:<password>@cluster0.mongodb.net/tudatabase?retryWrites=true&w=majority
+PORT=5000
+SECRET_KEY_JWT=ASJ
