--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MONGO_URI=mongodb://localhost:27017/tasksAppCoally
 MONGO_URI_Attlas=mongodb+srv://<usuario>:<password>@cluster0.mongodb.net/tudatabase?retryWrites=true&w=majority
 PORT=5000
 SECRET_KEY_JWT=ASJ
+URL=https://coallytaskback.up.railway.app
+
